--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/cuboid3d.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Vite + React</title>
+
+    <title>Yuvraj Snaptrude Assignment</title>
   </head>
   <body>
     <div id="root"></div>
